testsuite/tests/typecheck/should_fail/FD3.stderr
FD3.hs:15:15: error: [GHC-39999]
    • No instance for ‘MkA (String, a) a’ arising from a use of ‘mkA’
      Insoluble functional dependencies wrt top-level instances
    • In the expression: mkA a
      In an equation for ‘translate’: translate a = mkA a

